tests/api/reference/negative/14-tokens-join-type.asm
const invalid: string = tokens.join("name")
